--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/c770d258f6.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -88,16 +89,19 @@
         <h1 class="sub-title">My Service</h1>
         <div class="service-list">
             <div>
+                <i class="fa-solid fa-code"></i>
                 <h2> web design</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, debitis cumque quo maiores eos laudantium soluta quidem sit ea adipisci, voluptate assumenda! Non id nisi nihil amet mollitia quibusdam laboriosam?</p>
                 <a href="#">learn more</a>
             </div>
             <div>
+                <i class="fa-solid fa-crop-simple"></i>
                 <h2>app design</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, debitis cumque quo maiores eos laudantium soluta quidem sit ea adipisci, voluptate assumenda! Non id nisi nihil amet mollitia quibusdam laboriosam?</p>
                 <a href="#">learn more</a>
             </div>
             <div>
+                <i class="fa-brands fa-app-store"></i>
                 <h2>design</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, debitis cumque quo maiores eos laudantium soluta quidem sit ea adipisci, voluptate assumenda! Non id nisi nihil amet mollitia quibusdam laboriosam?</p>
                 <a href="#">learn more</a>
@@ -105,7 +109,71 @@
         </div>
     </div>
 </div>
+                                                <!-- portfolio -->
 
+<div id="portfolio">
+    <div class="container">
+        <h1 class="sub-title">My Work</h1>
+        <div class="work-list">
+            <div class="work">
+                <img src="https://images.pexels.com/photos/4709288/pexels-photo-4709288.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2">
+                <div class="layer">
+                    <h3>Social Media</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis est nulla facere rem assumenda inventore velit architecto voluptas laudantium, deserunt esse doloribus. Assumenda culpa porro totam accusamus dignissimos eum earum.</p>
+                    <a href="#"><i class="fa-solid fa-link"></i></a>
+                </div>
+            </div>
+            <div class="work">
+                <img src="https://images.pexels.com/photos/5380638/pexels-photo-5380638.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2">
+                <div class="layer">
+                    <h3>Social Media</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis est nulla facere rem assumenda inventore velit architecto voluptas laudantium, deserunt esse doloribus. Assumenda culpa porro totam accusamus dignissimos eum earum.</p>
+                    <a href="#"><i class="fa-solid fa-link"></i></a>
+                </div>
+            </div>
+            <div class="work">
+                <img src="https://images.pexels.com/photos/4064839/pexels-photo-4064839.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2">
+                <div class="layer">
+                    <h3>Social Media</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis est nulla facere rem assumenda inventore velit architecto voluptas laudantium, deserunt esse doloribus. Assumenda culpa porro totam accusamus dignissimos eum earum.</p>
+                    <a href="#"><i class="fa-solid fa-link"></i></a>
+                </div>
+            </div>
+        </div>
+        <a href="#" class="btn">See More</a>
+    </div>
+</div>
+
+                                    <!-- contect -->
+
+<div id="contact">
+    <div class="container">
+        <div class="row">
+            <div class="contact-left">
+                <h1 class="sub-title">Contact Me</h1>
+                <p><i class="fa-regular fa-envelope"></i>abcd@gmail.com</p>
+                <p> <i class="fa-solid fa-phone"></i>123...45</p>
+                <div class="social-icon">
+                    
+                    <a href="https://www.linkedin.com/in/raja-nayak-141240294/"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://github.com/rajaNayak123"><i class="fa-brands fa-github"></i></a>
+                    <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                    
+                </div>
+                <a href="" class="btn btn2">Downlod</a>
+            </div>
+            <div class="contact-right">
+                <form>
+                    <input type="text" name="Name" placeholder="Your Name" required>
+                    <input type="email" name="email" placeholder="Your Email" required>
+                    <textarea name="Message" rows="6" placeholder="Your message"></textarea>
+                    <button type="submit" class="btn btn2">Submit</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
 
 <script>
 
