change project and it's image

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </ul>
             </nav>
             <div class="header-text">
-                <p>Full-Stack Developer</p>
+                <p>Front-end Developer</p>
                 <h1>Hello, i'am <span>RAJA</span><br> NAYAK From India</h1>
             </div>
         </div>
@@ -35,7 +35,7 @@
         <div class="containers">
             <div class="row">
                 <div class="about-col-1">
-                    <img src="https://i.pinimg.com/564x/79/a3/3a/79a33a44041e9197b3a3e3e75961e256.jpg">
+                    <img src="https://i.pinimg.com/564x/a8/58/46/a858463ac4b8a4a6013ca80ed0e6c475.jpg">
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
@@ -45,29 +45,24 @@
                         Possimus aliquam nemo veniam praesentium explicabo ullam iste magni harum quaerat ut officiis
                         temporibus voluptates esse delectus rerum perferendis assumenda tenetur vero sint nisi
                         voluptatum et, libero illum? Quia, atque!
-                        Suscipit nemo odio deserunt debitis doloremque accusamus est minus illo rerum, deleniti velit,
-                        asperiores repellendus! Perspiciatis labore debitis commodi laboriosam cumque beatae alias,
-                        similique nesciunt facere esse eius aliquam optio?
-                        Amet perferendis ab exercitationem quia velit tenetur, neque magni, assumenda officiis fugiat
-                        fugit temporibus beatae praesentium quibusdam eius ipsum a necessitatibus minus hic, atque unde!
-                        Nisi deserunt ea dolor dolore?</p>
+                       </p>
                     <div class="tab-title">
                         <p class="tab-links active-link" onclick="opentab('skill')">Skill</p>
-                        <p class="tab-links" onclick="opentab('exprience')">Exprience</p>
+                        <p class="tab-links" onclick="opentab('exprience')">Projects</p>
                         <p class="tab-links" onclick="opentab('education')">Education</p>
                     </div>
                     <div class="tab-content active-tab" id="skill">
                         <ul>
-                            <li><span>Frontend :</span><br>HTML/CSS , Javascript</li>
-                            <li><span>Backend :</span><br>Nodejs , MongoDb</li>
+                            <li><span>Languages :</span><br><br>Java , JavaScript , HTML/CSS</li>
+                            <li><span>Library :</span><br>React.js , MongoDb</li>
                             <li>Git And Github</li>
                         </ul>
                     </div>
                     <div class="tab-content" id="exprience">
                         <ul>
-                            <li><span>Netflix clone</span><br> using HTML/CSS , Javascript</li>
-                            <li><span>Database management </span><br>using javascript</li>
-                            <li><span>Calculator</span><br>using javascript , HTML/CSS</li>
+                            <li> 1. <span>Netflix Clone</span><br> using HTML/CSS , Javascript</li>
+                            <li> 2. <span>Image Search Engine </span><br>using javascript</li>
+                            <li> 3. <span>To-Do List</span><br>using javascript , HTML/CSS</li>
                         </ul>
                     </div>
                     <div class="tab-content" id="education">
@@ -86,25 +81,25 @@
 
 <div id="services">
     <div class="container">
-        <h1 class="sub-title">My Service</h1>
+        <h1 class="sub-title">My Projects</h1>
         <div class="service-list">
             <div>
-                <i class="fa-solid fa-code"></i>
-                <h2> web design</h2>
+                <img src="https://i.pinimg.com/564x/d9/91/b9/d991b986f4788f2628f2066c005ba8c5.jpg">
+                <h2>Apple website</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, debitis cumque quo maiores eos laudantium soluta quidem sit ea adipisci, voluptate assumenda! Non id nisi nihil amet mollitia quibusdam laboriosam?</p>
-                <a href="#">learn more</a>
+                <a href=" https://rajanayak123.github.io/Apple_Website_Clone/">Open Link</a>
             </div>
             <div>
-                <i class="fa-solid fa-crop-simple"></i>
-                <h2>app design</h2>
+                <img src="https://images.unsplash.com/photo-1599652521984-8bebed0580b7?q=80&w=3087&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
+                <h2>Image Search Engine</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, debitis cumque quo maiores eos laudantium soluta quidem sit ea adipisci, voluptate assumenda! Non id nisi nihil amet mollitia quibusdam laboriosam?</p>
-                <a href="#">learn more</a>
+                <a href="https://rajanayak123.github.io/imageSearchEngine/">Open Link</a>
             </div>
             <div>
-                <i class="fa-brands fa-app-store"></i>
-                <h2>design</h2>
+                <img src="https://images.unsplash.com/photo-1579532536935-619928decd08?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDEwfHx8ZW58MHx8fHx8" alt="">
+                <h2>To-Do-List</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, debitis cumque quo maiores eos laudantium soluta quidem sit ea adipisci, voluptate assumenda! Non id nisi nihil amet mollitia quibusdam laboriosam?</p>
-                <a href="#">learn more</a>
+                <a href="https://rajanayak123.github.io/To-do_List/">Open Link</a>
             </div>
         </div>
     </div>
@@ -113,21 +108,21 @@
 
 <div id="portfolio">
     <div class="container">
-        <h1 class="sub-title">My Work</h1>
+        <h1 class="sub-title">My Hobbies</h1>
         <div class="work-list">
             <div class="work">
-                <img src="https://images.pexels.com/photos/4709288/pexels-photo-4709288.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2">
+                <img src="https://i.pinimg.com/564x/7f/91/2b/7f912b092e71134f0e7db187be68f37b.jpg">
                 <div class="layer">
-                    <h3>Social Media</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis est nulla facere rem assumenda inventore velit architecto voluptas laudantium, deserunt esse doloribus. Assumenda culpa porro totam accusamus dignissimos eum earum.</p>
+                    <h3>WorkOut</h3>
+                    <p>Exercise helps people keep a healthy weight and lower their risk of some diseases.Exercising regularly can help prevent weight gain, type 2 diabetes, heart disease, and high blood pressure. Bone-strengthening exercise — like jumping, running, or lifting weights — can help keep bones strong.</p>
                     <a href="#"><i class="fa-solid fa-link"></i></a>
                 </div>
             </div>
             <div class="work">
-                <img src="https://images.pexels.com/photos/5380638/pexels-photo-5380638.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2">
+                <img src="https://i.pinimg.com/564x/bd/bb/62/bdbb62d27f67163dc2820683c6a25c5f.jpg">
                 <div class="layer">
-                    <h3>Social Media</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis est nulla facere rem assumenda inventore velit architecto voluptas laudantium, deserunt esse doloribus. Assumenda culpa porro totam accusamus dignissimos eum earum.</p>
+                    <h3>Listening Book Summary</h3>
+                    <p>Listening is a learned process and skill that we can improve on with concerted effort. Improving our listening skills can benefit us in academic, professional, personal, and civic contexts. </p>
                     <a href="#"><i class="fa-solid fa-link"></i></a>
                 </div>
             </div>
